Heading spacing fix

--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -131,7 +131,7 @@ a:hover {
     text-transform: uppercase;
     color: #222222;
     font-size: 20px;
-    margin: 0 0 25px;
+    margin: 25px 0;
 }
 
 .blackbird-header {
